--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -55,6 +55,7 @@
             font-weight: bold;
             font-family: monospace;
             color: #f5f5f5;
+            user-select: none;
         }
     }
 
