--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,9 @@ body {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 40px;
+  margin-top: 10px;
   background: #6c757d;
   text-align: center;
 }
