--- a/src/pages/Connect/style.scss
+++ b/src/pages/Connect/style.scss
@@ -1,14 +1,18 @@
 .connect {
     width: 100%;
-    height: 90vh;
+    height: 85vh;
     background-image: url(../../images/contact.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .info {
 
-        width: 100%;
-        height: 100%;
+        width: inherit;
+        height: inherit;
         background: #00000041;
         color: #ffffff;
         font-size: 26px;
