--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -23,6 +23,7 @@
         height: 80vh;
         background-image: url("../../images/home-guest.jpg");
         background-position: center;
+        background-repeat: no-repeat;
         position: relative;
 
         .text {
@@ -57,6 +58,16 @@
             color: #f5f5f5;
             user-select: none;
         }
+    }
+
+    &-news-info{
+        width: 100%;
+        height: 100px;
+        font-size: 22px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .Sign {
