--- a/src/components/Food/style.scss
+++ b/src/components/Food/style.scss
@@ -1,9 +1,45 @@
 .col-md-4 {
-    img {
-        width: 100%;
+    .plate {
+        width: 225px;
+        border-radius: 50%;
+        animation: food 20s linear infinite;
     }
 }
 
 ul {
     list-style-type: none;
+}
+
+@keyframes food{
+    13% {
+        transform: rotate(45deg);
+    }
+
+    25% {
+        transform: rotate(90deg);
+    }
+
+    37% {
+        transform: rotate(135deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    68% {
+        transform: rotate(225deg);
+    }
+
+    75% {
+        transform: rotate(270deg);
+    }
+
+    88% {
+        transform: rotate(315deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
