--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -47,16 +47,32 @@
         background-position: center;
         position: relative;
 
+        @media screen and (max-width: 764px) {
+            background-size: cover;
+            background-position: left;
+            height: 60vh;
+          }
+
         div {
             position: absolute;
             transform: rotate(-10deg);
-            top: 110px;
+            top: 100px;
             left: 15%;
             font-size: 34px;
             font-weight: bold;
             font-family: monospace;
             color: #f5f5f5;
             user-select: none;
+
+            @media screen and (max-width: 992px) {
+                top: 160px;
+                font-size: 28px;
+              }
+              @media screen and (max-width: 764px) {
+                top: 20px;
+                left: 20%;
+                font-size: 34px;
+              }
         }
     }
 
@@ -68,6 +84,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
     }
 
     .Sign {
