--- a/src/pages/Connect/style.scss
+++ b/src/pages/Connect/style.scss
@@ -30,3 +30,18 @@
         }
     }
 }
+
+.comments {
+    width: 100%;
+    height: 100px;
+    font-size: 22px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    input {
+        width: 100%;
+        resize: none;
+      }
+}
