--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -12,4 +12,12 @@
         width: 70px;
         height: 50px;
     }
+
+    @media screen and (max-width: 575px ) {
+        
+        img {
+            width: 130px;
+            height: 100px;
+        }
+    }
 }
