--- a/src/pages/Connect/style.scss
+++ b/src/pages/Connect/style.scss
@@ -1,10 +1,10 @@
 .connect {
     width: 100%;
     height: 85vh;
-    background-image: url(../../images/contact.jpg);
-    background-size: 100%;
+    background-image: url(../../images/connect-mb.jpg);
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +29,18 @@
             border-radius: 3px;
         }
     }
+
+    @media screen and (min-width: 768px) {
+        width: 100%;
+        background-size: cover;
+    }
+
+    @media screen and (min-width: 576px) {
+        width: 100%;
+        background-image: url(../../images/contact.jpg);
+        background-size: cover;
+    }
+    
 }
 
 .comments {
