validation & realtime chat in comments v2.0

--- a/src/pages/Connect/style.scss
+++ b/src/pages/Connect/style.scss
@@ -57,3 +57,20 @@
         resize: none;
       }
 }
+
+.form-floating{
+    position: relative;
+
+    .send-btn{
+        position: absolute;
+        bottom: 5px;
+        right: 5px;
+        border: none;
+        background: none;
+        outline: none;
+    
+        &:hover{
+            color: #6c757d;
+        }
+}
+}
