--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -53,7 +53,7 @@
             height: 60vh;
           }
 
-        div {
+          .user-name {
             position: absolute;
             transform: rotate(-10deg);
             top: 100px;
